--- a/userdashboard.html
+++ b/userdashboard.html
@@ -6,75 +6,236 @@
 <title>User Dashboard</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-body{font-family:Arial, sans-serif; margin:0; padding:1rem; background:#f4f6f8;}
-h1{margin-top:0}
-.card{background:#fff; padding:1rem; border-radius:12px; margin-bottom:1rem; box-shadow:0 4px 12px rgba(0,0,0,.08);}
-table{width:100%; border-collapse:collapse; margin-top:.5rem;}
-th,td{padding:.6rem; border-bottom:1px solid #ddd; text-align:left;}
-th{background:#eee;}
+:root{
+  --text:#111111; --blue:#0a53c1; --ink-20:#f4f6f8;
+  --white:#ffffff; --border:#e6e8eb;
+  --shadow:0 6px 24px rgba(0,0,0,.06);
+}
+*{box-sizing:border-box}
+body{margin:0;font-family:Inter,system-ui,sans-serif;background:var(--white);color:var(--text);}
+.app{display:grid;grid-template-columns:240px 1fr;min-height:100vh}
+.sidebar{border-right:1px solid var(--border);background:var(--white);}
+.brand{font-weight:800;text-transform:uppercase;padding:1rem;border-bottom:1px solid var(--border);}
+nav{padding:1rem}
+.nav-item{display:block;padding:.6rem;border-radius:8px;text-decoration:none;color:var(--text);}
+.nav-item:hover,.nav-item.active{background:var(--ink-20)}
+.main{display:grid;grid-template-rows:64px 1fr;min-width:0}
+.topbar{display:flex;align-items:center;justify-content:space-between;padding:0 1rem;border-bottom:1px solid var(--border);}
+.search{display:flex;align-items:center;border:1px solid var(--border);border-radius:12px;padding:.4rem .7rem}
+.search input{border:none;outline:none}
+.btn{border:1px solid var(--text);background:transparent;padding:.4rem .8rem;border-radius:8px;cursor:pointer}
+.content{padding:1rem;overflow:auto}
+.grid{display:grid;gap:1rem;grid-template-columns:repeat(auto-fit,minmax(200px,1fr))}
+.card{background:#fff;border:1px solid var(--border);border-radius:12px;padding:1rem;box-shadow:var(--shadow)}
+table{width:100%;border-collapse:collapse}
+th,td{border-bottom:1px solid var(--border);padding:.6rem;text-align:left;vertical-align:middle}
+th{font-size:.85rem;opacity:.7}
+.star{font-size:1.2rem;color:gold}
 </style>
 </head>
 <body>
-<h1>User Dashboard</h1>
+<div class="app">
+  <aside class="sidebar open" id="sidebar">
+    <div class="brand">LGU 3 USER SYSTEM</div>
+   <nav>
+    <a href="#" class="nav-item active" data-page="dashboard">Dashboard</a>
+    <a href="#" class="nav-item" data-page="Vendor">Vendor Management</a>
+    <a href="#" class="nav-item" data-page="Supply">Supply Monitoring</a>
+    <a href="#" class="nav-item" data-page="Reports">Reports and Dashboard with AI analytic</a>
+    <a href="#" class="nav-item" data-page="Settings">Settings</a>
+    <a href="main.html" class="nav-item logout-btn" style="margin-top: 2rem; font-weight: bold;">Logout</a>
+  </nav>
+</aside>
 
-<div class="card">
-  <h2>Vendor Management</h2>
-  <table id="vendorTable">
-    <thead>
-      <tr><th>Business</th><th>Status</th><th>Owner</th><th>Due Date</th><th>Payment</th><th>Rating</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
+  <section class="main">
+    <header class="topbar">
+      <div style="display:flex; align-items:center; gap:0.5rem;">
+        <button class="btn" id="backBtn">← Back</button>
+        <button class="btn" id="menuBtn">☰</button>
+        <div class="search">🔎 <input id="searchInput" type="search" placeholder="Search…"></div>
+      </div>
+      <div>
+        <button class="btn" id="exportBtn">Export</button>
+      </div>
+    </header>
 
-<div class="card">
-  <h2>Supply Monitoring</h2>
-  <table id="supplyTable">
-    <thead>
-      <tr><th>Ref</th><th>Business</th><th>Category</th><th>Supplier</th><th>Pick-up</th><th>Drop-off</th><th>Time</th><th>Report</th><th>Contact</th><th>Value</th><th>Quality</th><th>Status</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
-<div class="card">
-  <h2>Recent Complaints</h2>
-  <ul id="complaintsList"></ul>
+    <div class="content" id="contentArea"></div>
+  </section>
 </div>
 
 <script>
-async function loadData(){
-  const res = await fetch("data.json");
-  const data = await res.json();
+const contentArea = document.getElementById("contentArea");
 
-  
-  const vendorBody = document.querySelector("#vendorTable tbody");
-  data.vendors.forEach(v=>{
-    vendorBody.innerHTML += `<tr>
-      <td>${v.business}</td><td>${v.status}</td><td>${v.owner}</td>
-      <td>${v.dueDate}</td><td>${v.payment}</td><td>${"★".repeat(v.rating)}</td>
-    </tr>`;
-  });
+const pages = {
+  dashboard: ` <h1>Dashboard</h1>
+    <div class="grid">
+      <div class="card"><h3>Price Variance / Cost Savings</h3><p>₱12,500</p><small>+8% vs last month</small></div>
+      <div class="card"><h3>On-Time Delivery Rate</h3><p>92%</p><small>+3 pts</small></div>
+      <div class="card"><h3>Defect Rate / Compliance Score</h3><p>2%</p><small>-1 pt</small></div>
+      <div class="card"><h3>Vendor Performance Score</h3><p>87/100</p><small>Stable</small></div>
+    </div>
 
-  
-  const supplyBody = document.querySelector("#supplyTable tbody");
-  data.supplies.forEach(s=>{
-    supplyBody.innerHTML += `<tr>
-      <td>${s.ref}</td><td>${s.business}</td><td>${s.category}</td><td>${s.supplier}</td>
-      <td>${s.pickup}</td><td>${s.dropoff}</td><td>${s.time}</td>
-      <td>${s.report}</td><td>${s.contact}</td><td>${s.value}</td>
-      <td>${"★".repeat(s.quality)}</td><td>${s.status}</td>
-    </tr>`;
-  });
+    <div class="grid">
+      <div class="card">
+        <h3>Supply Chain Flow (Last 6 Weeks)</h3>
+        <canvas id="pipelineChart" height="100"></canvas>
+      </div>
+      <div class="card">
+        <h3>Tasks (Read Only)</h3>
+        <ul>
+          <li>Review vendor contracts</li>
+          <li>Monitor deliveries</li>
+          <li>Update compliance checklist</li>
+          <li>Evaluate supplier pricing</li>
+        </ul>
+      </div>
+    </div>
 
+    <div class="card" style="margin-top:1rem;">
+      <h3>Recent Vendor Engagements</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>Type of Business</th><th>Status</th><th>Owner</th><th>Due Date</th><th>Records of Payment</th><th>Rating</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>Takoyaki store</td><td>✅ Completed</td><td>Gacusan, Aira Jane</td><td>03 Sep 2025</td><td>₱3,785</td><td>★★★★★</td></tr>
+          <tr><td>Sound equipment</td><td>✏ In progress</td><td>Furigay, Neri Jane</td><td>10 Sep 2025</td><td>₱2,345</td><td>★★★★★</td></tr>
+          <tr><td>Tables and chairs</td><td>⏳ Not started</td><td>Pena, Rona Mae</td><td>04 Nov 2025</td><td>₱5,199</td><td>★★★★★</td></tr>
+          <tr><td>Atan's Meat Shop</td><td>⛔ Blocked</td><td>Dacoco, Jonathan</td><td>12 Mar 2025</td><td>₱1,870</td><td>★★★★★</td></tr>
+        </tbody>
+      </table>
+    </div>
+  `,
 
-  const complaintList = document.getElementById("complaintsList");
-  data.complaints.forEach(c=>{
-    complaintList.innerHTML += `<li>${c}</li>`;
-  });
+  Vendor: `
+    <h1>Vendor Management</h1>
+    <input type="text" id="vendorSearch" placeholder="Search Vendor…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
+    <table>
+      <thead>
+        <tr><th>Business Name</th><th>Status</th><th>Owner</th><th>Due Date</th><th>Records of Payment</th><th>Rating</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>Takoyaki store</td><td>✅ Completed</td><td>Gacusan, Aira Jane</td><td>03 Sep 2025</td><td>₱3,785</td><td>★★★★★</td></tr>
+        <tr><td>Sound equipment</td><td>✏ In progress</td><td>Furigay, Neri Jane</td><td>10 Sep 2025</td><td>₱2,345</td><td>★★★★★</td></tr>
+        <tr><td>Tables and chairs</td><td>⏳ Not started</td><td>Pena, Rona Mae</td><td>04 Nov 2025</td><td>₱5,199</td><td>★★★★★</td></tr>
+        <tr><td>Atan's Meat Shop</td><td>⛔ Blocked</td><td>Dacoco, Jonathan</td><td>12 Mar 2025</td><td>₱1,870</td><td>★★★★★</td></tr>
+      </tbody>
+    </table>
+  `,
+
+  Supply: `
+  <h1>Supply Monitoring</h1>
+  <input type="text" id="supplySearch" placeholder="Search Supply…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
+  <table>
+    <thead>
+      <tr>
+        <th>Ref No.</th><th>Business Name</th><th>Business Category</th><th>Supplier</th>
+        <th>Pick-up</th><th>Drop-off</th><th>Delivery Time</th><th>Report</th>
+        <th>Contact No.</th><th>Item Value</th><th>Quality</th><th>Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>RPT-001</td><td>Daisy Poultry</td><td>MEAT SHOP</td><td>James</td><td>Quezon City</td>
+        <td>Muñoz</td><td>12:00 am - 2:00 pm</td><td>Filed</td>
+        <td>0970-567-1136</td><td>₱4,000.00</td><td>★★★☆☆</td><td>⛔ Delayed</td>
+      </tr>
+      <tr>
+        <td>RPT-002</td><td>Takoyaki Supplier</td><td>SUPPLIES SHOP</td><td>Maria</td><td>Makati</td>
+        <td>Muñoz</td><td>7:00 am - 9:00 am</td><td>None</td>
+        <td>0917-888-9999</td><td>₱2,500.00</td><td>★★★★★</td><td>✅ Completed</td>
+      </tr>
+      <tr>
+        <td>RPT-003</td><td>Catering Supplies</td><td>CATERING</td><td>Sofia</td><td>Taguig</td>
+        <td>Muñoz</td><td>10:00 am - 12:00 pm</td><td>None</td>
+        <td>0920-555-4444</td><td>₱3,200.00</td><td>★★★★★</td><td>✏ In progress</td>
+      </tr>
+      <tr>
+        <td>RPT-004</td><td>Party Rental</td><td>RENTAL SHOP</td><td>Ramon</td><td>Manila</td>
+        <td>Muñoz</td><td>3:00 am - 5:00 am</td><td>None</td>
+        <td>0998-222-3333</td><td>₱5,000.00</td><td>★★★★★</td><td>✅ Completed</td>
+      </tr>
+    </tbody>
+  </table>
+  `,
+
+  Reports: `
+    <h1>Reports and Dashboard with AI Analytic</h1>
+    <div class="grid">
+      <div class="card">
+        <h3>Vendor Performance Dashboard</h3>
+        <canvas id="vendorChart" height="120"></canvas>
+      </div>
+      <div class="card">
+        <h3>Recent Complaints</h3>
+        <ul>
+          <li>Vendor delayed chicken delivery (Ref: RPT-001)</li>
+          <li>Incomplete Takoyaki supplies (Ref: RPT-002)</li>
+          <li>Catering delivery arrived late (Ref: RPT-003)</li>
+          <li>Rental items missing on arrival (Ref: RPT-004)</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>AI Chat Support</h3>
+        <div style="border:1px solid #ccc;padding:10px;border-radius:8px;">
+          🤖 Hello! This is a read-only view of reports.
+        </div>
+      </div>
+    </div>
+  `,
+
+  Settings: `<h1>Settings</h1><p>Settings content here...</p>`
+};
+
+function renderPage(page){
+  contentArea.innerHTML = pages[page]||`<h1>${page}</h1>`;
+  if(page==="dashboard") initDashboard();
+  if(page==="Reports") initReports();
 }
 
-loadData();
+function initDashboard(){
+  const ctx=document.getElementById("pipelineChart");
+  if(ctx){
+    new Chart(ctx,{
+      type:"line",
+      data:{
+        labels:["Week 1","Week 2","Week 3","Week 4","Week 5","Week 6"],
+        datasets:[{label:"Deliveries",data:[5,8,6,10,7,9],borderColor:"#0a53c1"}]
+      }
+    });
+  }
+}
+
+function initReports(){
+  const ctx=document.getElementById("vendorChart");
+  if(ctx){
+    new Chart(ctx,{
+      type:"bar",
+      data:{
+        labels:["Takoyaki","Meat Shop","Catering","Rental"],
+        datasets:[{label:"Performance",data:[87,65,72,90],backgroundColor:"#0a53c1"}]
+      }
+    });
+  }
+}
+
+document.querySelectorAll(".nav-item").forEach(link=>{
+  if(!link.classList.contains("logout-btn")){
+    link.onclick=(e)=>{
+      e.preventDefault();
+      document.querySelectorAll(".nav-item").forEach(l=>l.classList.remove("active"));
+      link.classList.add("active");
+      renderPage(link.dataset.page);
+    };
+  }
+});
+
+document.getElementById("backBtn").onclick=()=>window.history.back();
+document.getElementById("menuBtn").onclick=()=>document.getElementById("sidebar").classList.toggle("open");
+
+renderPage("dashboard");
 </script>
 </body>
 </html>
