--- a/admindashboard.html
+++ b/admindashboard.html
@@ -153,33 +153,62 @@ const pages = {
     </table>
   `,
 
-  Commidity: `
+    Commidity: `
     <h1>COMMODITY AND PRICE MONITORING</h1>
-<tr>
-<td contenteditable="true">Atan's Meat Shop</td>
-<td contenteditable="true"></td>
-<td contenteditable="true"></td>
-<td contenteditable="true">High</td>
-</tr>
-</tbody>
-</table>
+    <table id="commodityTable">
+      <thead>
+        <tr>
+          <th>Type of Business</th>
+          <th>Previous Price</th>
+          <th>Current Price</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td contenteditable="true">Takoyaki store</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true">Stable</td>
+        </tr>
+        <tr>
+          <td contenteditable="true">Sound equipment</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true">High</td>
+        </tr>
+        <tr>
+          <td contenteditable="true">Tables and chairs</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true">Low</td>
+        </tr>
+        <tr>
+          <td contenteditable="true">Atan's Meat Shop</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true">High</td>
+        </tr>
+      </tbody>
+    </table>
 
-<canvas id="pieChart" width="400" height="200"></canvas>
+    <canvas id="pieChart" width="400" height="200"></canvas>
 
-<div class="card-container">
-<div class="card" onclick="openModal('Takoyaki store')">Takoyaki store<br><button>View Data</button></div>
-<div class="card" onclick="openModal('Sound equipment')">Sound equipment<br><button>View Data</button></div>
-<div class="card" onclick="openModal('Tables and chairs')">Tables and chairs<br><button>View Data</button></div>
-<div class="card" onclick="openModal(`Atan's Meat Shop`)">Atan's Meat Shop<br><button>View Data</button></div>
-</div>
+    <div class="card-container" style="display:flex;gap:1rem;margin-top:1rem;">
+      <div class="card" onclick="openDataModal('Takoyaki store')">Takoyaki store<br><button>View Data</button></div>
+      <div class="card" onclick="openDataModal('Sound equipment')">Sound equipment<br><button>View Data</button></div>
+      <div class="card" onclick="openDataModal('Tables and chairs')">Tables and chairs<br><button>View Data</button></div>
+      <div class="card" onclick="openDataModal('Atan\\'s Meat Shop')">Atan's Meat Shop<br><button>View Data</button></div>
+    </div>
 
-<div id="dataModal" class="modal">
-<div class="modal-content">
-<span class="close" onclick="closeModal()">&times;</span>
-<h3 id="modalTitle"></h3>
-<canvas id="lineChart" width="400" height="200"></canvas>
-</div>
-</div>
+    <div id="dataModal" class="overlay" style="display:none;">
+      <div class="modal">
+        <span class="close" onclick="closeDataModal()" style="float:right;cursor:pointer;">&times;</span>
+        <h3 id="modalTitle"></h3>
+        <canvas id="lineChart" width="400" height="200"></canvas>
+      </div>
+    </div>
+  `,
   
   Supply: `
   <h1>Supply Monitoring</h1>
@@ -266,64 +295,63 @@ function attachRefLinks(){
   });
 }
 
-  const ctx = document.getElementById('pieChart').getContext('2d');
-let pieChart = new Chart(ctx, {
-type: 'pie',
-data: getPieData(),
-});
+function initCommodity(){
+  const ctx = document.getElementById('pieChart');
+  if(!ctx) return;
 
+  let pieChart = new Chart(ctx, {
+    type: 'pie',
+    data: getPieData(),
+  });
+
+
+  document.querySelectorAll('#commodityTable td').forEach(cell => {
+    cell.addEventListener('input', () => {
+      pieChart.data = getPieData();
+      pieChart.update();
+    });
+  });
+}
 
 function getPieData() {
-const statuses = Array.from(document.querySelectorAll('#commodityTable tbody tr td:nth-child(4)')).map(td => td.innerText.trim());
-let counts = { High: 0, Low: 0, Stable: 0 };
-statuses.forEach(status => {
-if (counts[status] !== undefined) counts[status]++;
-});
-return {
-labels: ['High', 'Low', 'Stable'],
-datasets: [{
-data: [counts.High, counts.Low, counts.Stable],
-backgroundColor: ['#9fff80', '#ff4d4d', '#ffd966']
-}]
-};
-}
-
-document.querySelectorAll('#commodityTable td').forEach(cell => {
-cell.addEventListener('input', () => {
-pieChart.data = getPieData();
-pieChart.update();
-});
-});
-
-
-function openModal(businessName) {
-document.getElementById('modalTitle').innerText = businessName + ' - Past 6 Months';
-document.getElementById('dataModal').style.display = 'flex';
-
-
-const ctxLine = document.getElementById('lineChart').getContext('2d');
-if (window.lineChart) window.lineChart.destroy();
-
-
-window.lineChart = new Chart(ctxLine, {
-type: 'line',
-data: {
-labels: ['Month 1', 'Month 2', 'Month 3', 'Month 4', 'Month 5', 'Month 6'],
-datasets: [{
-label: 'Price Trend',
-data: Array.from({length: 6}, () => Math.floor(Math.random() * 100)),
-borderColor: '#007bff',
-fill: false
-}]
-}
-});
+  const statuses = Array.from(document.querySelectorAll('#commodityTable tbody tr td:nth-child(4)')).map(td => td.innerText.trim());
+  let counts = { High: 0, Low: 0, Stable: 0 };
+  statuses.forEach(status => { if (counts[status] !== undefined) counts[status]++; });
+  return {
+    labels: ['High', 'Low', 'Stable'],
+    datasets: [{
+      data: [counts.High, counts.Low, counts.Stable],
+      backgroundColor: ['#9fff80', '#ff4d4d', '#ffd966']
+    }]
+  };
 }
 
 
-function closeModal() {
-document.getElementById('dataModal').style.display = 'none';
+function openDataModal(businessName) {
+  document.getElementById('modalTitle').innerText = businessName + ' - Past 6 Months';
+  document.getElementById('dataModal').style.display = 'flex';
+
+  const ctxLine = document.getElementById('lineChart').getContext('2d');
+  if (window.lineChart) window.lineChart.destroy();
+
+  window.lineChart = new Chart(ctxLine, {
+    type: 'line',
+    data: {
+      labels: ['Month 1', 'Month 2', 'Month 3', 'Month 4', 'Month 5', 'Month 6'],
+      datasets: [{
+        label: 'Price Trend',
+        data: Array.from({length: 6}, () => Math.floor(Math.random() * 100)),
+        borderColor: '#007bff',
+        fill: false
+      }]
+    }
+  });
 }
 
+function closeDataModal() {
+  document.getElementById('dataModal').style.display = 'none';
+}
+  
 function initReports(refNo){
   const ctx=document.getElementById("vendorChart");
   if(ctx){
@@ -413,6 +441,7 @@ function renderPage(page, refNo=null){
   if(page==="Vendor") makeTableEditable("vendorTable","vendorSearch");
   if(page==="Supply"){ makeTableEditable("supplyTable","supplySearch"); attachRefLinks(); }
   if(page==="Reports") initReports(refNo);
+  if(page==="Commidity") initCommodity();   
 }
 
 document.querySelectorAll(".nav-item").forEach(link=>{
